<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/recycler_item_padding"
    android:paddingBottom="@dimen/recycler_item_padding">

    <TextView
        android:id="@+id/day"
        android:text="@string/day"
        android:textSize="@dimen/large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/daily_conditions"
        android:text="@string/daily_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tempHigh"
        android:text="@string/temperature_high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tempLow"
        android:text="@string/temperature_low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>