<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/settings"
        android:orientation="vertical"
        android:layout_width="369dp"
        android:layout_height="554dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_text" />

        <RadioButton
            android:id="@+id/current_location"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/current_location_description" />

        <RadioButton
            android:id="@+id/select_location"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:text="@string/select_location_description"
            />

        <EditText
            android:id="@+id/enter_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusedByDefault="false"
            android:inputType="textPostalAddress" />
    </RadioGroup>


</android.support.constraint.ConstraintLayout>